--- a/views/faculty-activities/roles.ejs
+++ b/views/faculty-activities/roles.ejs
@@ -8,7 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">  
     <link rel="stylesheet" href="/css/roles.css">
-    <link rel="stylesheet" href="../css/form-submit.css">
+    <link rel="stylesheet" href="/css/form-submit.css">
     <title>Home</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 
 <div class="container">
         <h1>Assign Role/s:</h1>
-    <form action="/activities/roles" method="POST">
+    <form action="/faculty/activities/roles" method="POST">
         <div class="form-control">
             <h4>Course Department Chair</h4>
             <input type="text" name="email">
