--- a/views/student-activities/revise.ejs
+++ b/views/student-activities/revise.ejs
@@ -16,7 +16,7 @@
       <% console.log(student.groupId + " student group id") %>
       <div class="container">
         <% for (let i = 0; i < submissions.length; i++) { %>
-          <% console.log(submissions[i].title) %>
+              <form action="/student/activities/revise" method="POST" enctype="multipart/form-data">
                 <article class="card">
                   <div class="form-control card-header">
                     <h1 class="form__title"><%= submissions[i].title %></h1>
@@ -24,16 +24,21 @@
                   <div class="form-control">
                     <h4>Status: <%= submissions[i].status %></h4>
                   </div>
+                  <div class="form-control">
+                    <label for="file">PDF file</label>
+                    <input type="file" class="form-control" name="file" id="file" accept=".pdf">
+                  </div>
                   <div class="form-control" id="viewer-<%= i %>">
                     <iframe src="<%= submissions[i].filePath %>" frameborder="0" width="70%" height="500px"></iframe>
                   </div>
                   <div class="card-actions">
-                    <% if(role === "Faculty") { %>
-                    <button>Approve</button>
-                    <% } %>
+                    <button type="submit">Submit Revision</button>
+                    <input type="hidden" value="<%= submissions[i].id %>" name="submissionId">
                     <a onclick="toggleIframe(<%= i %>)">View</a>
                   </div>
                 </article>
+              </form>
+                
         <% } %>
       </div>
     <% } %>
