--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="/css/auth.css">
-  </head>
-  <body>
-    <div class="container">
-      <form action="/auth/login" method="POST">
-        <h1>Login</h1>
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password:</label>
-          <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-      <ul>
-        <li><a href="/auth/register">Register</a></li>
-      </ul>
-    </div>
-  </body>
+<html lang="en">
+<head>
+        <title>LoginPage</title>
+</head>
+<body>
+    <header>
+    <link rel="stylesheet" href = "/css/auths.css">
+        <div class = "header">
+    <img style="float: right; margin: 0px 30px 10px 20px;" src="/img/IICS_Logo.png" width="130" />
+    <img style="float: left; margin: 20px 20px 20px 20px;" src="/img/ust_logo_name.png" width="900" />
+      </header>
+      <div>
+     <center> <h1>Log in</h1></center> 
+      </div>
+      <div class = "grayline">
+        <center>
+        <div class = "box">    
+          <form action="/auth/login" method="POST">
+            <input type = "text" name = "email" placeholder="UST email address" required>
+            <div class = "box1">    
+              <input type = "password" name = "password" placeholder="Password" required>
+              <div>
+                <h5>Dont have account? <a href="/auth/register">Register here</a></h5> <!--link dito -->
+              </div>
+              <div class = "box2">    
+                <button class="button button1" type="submit">Login</button>
+                <div>
+                  <h6>Forgot Password?</h6>   <!--link dito -->
+                </div>
+                <div>
+                  <h6>Click here for the tutorial</h6>  <!--link dito -->
+                </div>
+              </div>
+            </form>
+            </div>
+</body>
 </html>
