--- a/views/faculty-activities/approve-documents.ejs
+++ b/views/faculty-activities/approve-documents.ejs
@@ -28,43 +28,37 @@
     <button type="button" onclick="filterForms()">Filter</button>
   </div>
   
-  <% if (forms.length > 0) { %>
+
     <div class="container" id="form-container">
-      <% for (let i = 0; i < forms.length; i++) { %>
-        <% for (let j = 0; j < forms[i].submissions.length; j++) { %>
-          <% if (forms[i].submissions[j].status !== null && forms[i].submissions[j].status !== 'approved') { %>
-            <article class="card section-<%= forms[i].section %>">
+      <% for (let i = 0; i < submissions.length; i++) { %>
+          <% if (submissions[i].status !== null && submissions[i].status !== 'approved') { %>
+            <% if(submissions[i].batchId == activeBatchId) { %>
+            <article class="card section">
               <div class="form-control card-header">
-                <h1 class="form__title"><%= forms[i].title %></h1>
-              </div>
-              <div class="form-control card-header">
-                <h1 class="form__title"><%= forms[i].section %></h1>
+                <h1 class="form__title"><%= submissions[i].title %></h1>
               </div>
               <div class="form-control">
-                <h4>Status: <%= forms[i].submissions[j].status %></h4>
+                <h4><%= groups[i].capstoneTitle %></h4>
               </div>
               <div class="form-control">
-                <h4>GroupId: <%= forms[i].submissions[j].groupId %></h4>
+                <h4><%= groups[i].section %></h4>
               </div>
-              <!-- <div class="form-control" id="viewer-<%= j %>">
-                <iframe src="<%= forms[i].submissions[j].filePath %>" frameborder="0" width="70%" height="500px"></iframe>
-              </div> -->
+              <div class="form-control">
+                <h4>Status: <%= submissions[i].status %></h4>
+              </div>
               <div class="card-actions">
                 <% if(role === "Faculty") { %>
-                <form action='/faculty/activities/view/<%= forms[i].submissions[j].id %>' method="GET">
+                <form action='/faculty/activities/view/<%= submissions[i].id %>' method="GET">
                   <button>View</button>
                 </form>
                 <% } %>
                 <!-- <a onclick="toggleIframe(<%= i %>)">View</a> -->
               </div>
-              <input type="hidden" value="<%= forms[i].id %>" name="formId">
-              <input type="hidden" value="<%= forms[i].status %>" name="formStatus">
             </article>
-          <% } %>
+            <% } %>
         <% } %>
       <% } %>
     </div>
-  <% } %>
 
 
   <script>
